# illust-logic-solver

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: ALGORITHM.md  SPECIFICATION.md
docs/samples/: README.md  backtrack_required_10x10.json  easy_5x5.json  edge_1x1.json  edge_all_empty_5x5.json  edge_all_filled_5x5.json  edge_large_50x50.json  heart_15x15.json  medium_10x10.json  multiple_solutions.json  no_solution.json
samples/: pudding.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/puzzle/: data.rs  file_io.rs  hint_generator.rs  mod.rs
src-tauri/src/solver/: backtrack.rs  line_solver.rs  logical_solver.rs  mod.rs  pattern.rs  types.rs  validator.rs
src/components/layout/: TabBar.tsx
src/components/puzzle/: ActionButtons.tsx  Grid.tsx  GridSizeControl.tsx  HintEditor.tsx  InputModeToggle.tsx  PuzzleTab.tsx
src/components/result/: ResultDisplay.tsx  SolutionGrid.tsx
src/components/settings/: SettingsTab.tsx
src/hooks/: useGridInteraction.ts
src/lib/: fileIO.ts  tauriApi.ts
src/store/: puzzleStore.ts
src/types/: puzzle.ts
